edit CSS and JS links

--- a/index.html
+++ b/index.html
@@ -4,46 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bootstrap 4 Testimonial Slider</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css">
 
-    <link rel="stylesheet" href="custom.css" type="text/css">
+    <title>Bootstrap 4 Testimonial Slider</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="/Users/jylevergara/Desktop/bootstrap-testimonial-slider/custom.css" type="text/css">
 </head>
 <body>
-    <section class="call-to-action bg-darkblue">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="carousel slide" data-ride="carousel" id="quote-carousel">
-                        <!-- Carousel Slides / Quotes -->
-                        <div class="carousel-inner text-center" role="listbox">
-                            <!-- Quote 1 -->
-                            <div class="carousel-item active">
-                                <blockquote>
-                                    <div class="row">
-                                        <div class="col-md-8 col-md-offset-2">
-                                            <p>It was a pleasure working with her as she worked closely with us and 
-                                                we valued her creative input that exceeded our expectations. We were impressed all around with her attention to detail, 
-                                                skills and customer service every step of the way. We highly recommend her for all your website needs.</p>
-                                            <small>Ian Grail, <a href="https://codehangar.io/">Code Hangar</a></small>
-                                        </div>
+        <section class="call-to-action bg-darkblue">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+                                <!-- Carousel Slides / Quotes -->
+                                <div class="carousel-inner text-center text-faded" role="listbox">
+                                    <!-- Quote 1 -->
+                                    <div class="carousel-item active">
+                                        <blockquote>
+                                            <div class="row">
+                                                <div class="col-md-8 col-md-offset-2">
+                                                    <p>It was a pleasure working with her as she worked closely with us and we valued her creative input that exceeded our expectations. We were impressed all around with her attention to detail, skills and customer service every step of the way. 
+                                                      We highly recommend her for all your website needs. </p>
+                                                    <small>Ian Grail, <a href="https://codehangar.io/" target="_blank">Code Hangar</a></small>
+                                                </div>
+                                            </div>
+                                        </blockquote>
                                     </div>
-                                </blockquote>
-                            </div>
-                            <!-- Quote 2 -->
-                            <div class="carousel-item">
-                                <blockquote>
-                                    <div class="row">
-                                        <div class="col-md-8 col-md-offset-2">
-                                            <p>Jyle has helped us develop a professional and beautiful website which showcases our organization very well. 
-                                                Not only was she knowledgeable and efficient in her work, but she also offered her creative ideas throughout 
-                                                the process of adding features and created solutions to the functionality and user experience of our site which turned out be an amazing end result.</p>
-                                            <small>Jessica Hilston, <a href="http://womenofvietnam.com">Women of Vietnam</a></small>
-                                        </div>
+                                    <!-- Quote 2 -->
+                                    <div class="carousel-item">
+                                        <blockquote>
+                                            <div class="row">
+                                                <div class="col-md-8 col-md-offset-2">
+                                                    <p>Jyle has helped us develop a professional and beautiful website which showcases our organization very well.
+                                                       Not only was she knowledgeable and efficient in her work, but she also offered her creative ideas throughout the process
+                                                        of adding features and created solutions to the functionality and user experience of our site which turned out be an amazing end result. 
+                                                      </p>
+                                                    <small>Jessica Hilston, <a href="http://womenofvietnam.com" target="_blank">Women of Vietnam</a></small>
+                                                </div>
+                                            </div>
+                                        </blockquote>
                                     </div>
-                                </blockquote>
-                            </div>
                             <!-- Quote 3 -->
                             <div class="carousel-item">
                                 <blockquote>
@@ -80,7 +82,8 @@
             </div>
           </section>    
 </body>
-<script src "https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+
 </html>
